fix: disable dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,8 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
   }
 }
 
@@ -37,6 +33,5 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
   }
 }
